# Stuka

./: .bazelrc  .gitignore  .gitmodules  .travis.yml  BUILD  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  setup.py  stuka.bzl
bindings/python/: CMakeLists.txt
bindings/python/src/: callbacks.cpp  callbacks.h  dlp.cpp  dlp.h  lp.cpp  lp.h  qp.cpp  qp.h  stochastic.cpp  stochastic.h  stukapy.cpp
bindings/python/src/dlp/: dlp.cpp  dlp.h
bindings/python/src/lp/: lp.cpp  lp.h
bindings/python/src/qp/: qp.cpp  qp.h
bindings/python/src/stochastic/: stochastic.cpp  stochastic.h
docs/: BUILD.bazel  CMakeLists.txt  Doxyfile.in
docs/sphinx_data/: conf.py  index.rst
docs/sphinx_data/basics/: core.rst  dlp.rst  index.rst  lp.rst  qp.rst  stochastic.rst
docs/sphinx_data/extending/: general.rst
docs/sphinx_data/python/: installation.rst
docs/sphinx_data/setup/: index.rst  installation.rst
include/: Eigen
include/Eigen/src/Cholesky/: LDLT.h
include/Eigen/src/Core/: ConditionEstimator.h  MapBase.h  MathFunctions.h  MatrixBase.h
include/Eigen/src/Core/arch/AVX512/: PacketMath.h
include/Eigen/src/Core/arch/CUDA/: Half.h
include/Eigen/src/Core/products/: GeneralBlockPanelKernel.h
include/Eigen/src/Core/util/: DisableStupidWarnings.h  Memory.h  Meta.h  ReenableStupidWarnings.h
include/Eigen/src/IterativeLinearSolvers/: ConjugateGradient.h
include/Eigen/src/Jacobi/: Jacobi.h
include/Eigen/src/SVD/: SVDBase.h
include/Eigen/src/SuperLUSupport/: SuperLUSupport.h
include/stuka/: base_solver.h  constants.h  defaults.h  optimize_state.h  options.h  stuka.h
include/stuka/LP/: base_lp.h  base_solver.h  constraint_reduction.h  gurobi.h  gurobi_lp.h  lazy_constraints.h  lazy_lp.h  lp.h  mehrotra_pc.h  preconditioned_lp.h  slack_lp.h  standard_lp.h
include/stuka/LP/preconditioner/: base_preconditioner.h  bounds_dedicated.h  bounds_zero.h  composite_preconditioner.h  constant_folding.h  dummy_preconditioner.h  slack_preconditioner.h
include/stuka/QP/: base_qp.h  base_solver.h  gurobi.h  gurobi_qp.h  mehrotra_pc.h  qp.h
include/stuka/callback/: base_callback.h
include/stuka/dLP/: base_solver.h  benders.h  benders_cut.h  benders_subproblem.h  cre.h  cre_subproblem.h  critical_region.h  decomposed_lp.h  naive_benders.h  naive_benders_subproblem.h  naive_cre.h  naive_cre_subproblem.h  subproblem.h
include/stuka/gurobi/: gurobi_env.h
include/stuka/gurobi/LP/: gurobi.h  gurobi_lp.h
include/stuka/gurobi/QP/: gurobi.h  gurobi_qp.h
include/stuka/stochastic/: base_solver.h  program.h  stochastic_pd.h  stochastic_pd2.h
include/stuka/stochastic/measure/: cvar.h  evar.h  expected_value.h  g_entropic.h  measure.h
include/stuka/util/: common_expressions.h  compose.h  constraint_reduction.h  dense_ops.h  functions.h  progress_bar.h  solver_factory.h  sparse_ops.h  timer.h
include/stuka/util/callback/: base_callback.h  composite.h  function.h  progress.h  save_hdf5.h
modules/: FindCHOLMOD.cmake  FindEIGEN.cmake  FindGUROBI.cmake  FindMKL.cmake  FindSPHINX.cmake  FindSPQR.cmake  findDOXYGEN.cmake
scripts/: Makefile  install_suitesparse.sh
scripts/pip_package/: BUILD.bazel  MANIFEST.in  README  build_pip_package.sh  setup.py
src/: CMakeLists.txt  test.cc
src/LP/: constraint_reduction.cpp  gurobi.cpp  gurobi_lp.cpp  lazy_constraints.cpp  lazy_lp.cpp  mehrotra_pc.cpp  slack_lp.cpp  standard_lp.cpp
src/LP/preconditioner/: bounds_dedicated.cpp  bounds_zero.cpp  constant_folding.cpp  slack_preconditioner.cpp
src/QP/: gurobi.cpp  gurobi_qp.cpp  mehrotra_pc.cpp
src/dLP/: benders.cpp  benders_subproblem.cpp  constraint_reduction.cpp  cre.cpp  cre_subproblem.cpp  critical_region.cpp  naive_benders.cpp  naive_benders_subproblem.cpp  naive_cre.cpp  naive_cre_subproblem.cpp
src/example/: borrelli_729.cc  borrelli_729.h  borrelli_731.cc  borrelli_731.h  example.h  simple_lp.cpp  simple_lp.h  simple_qp.cpp  simple_qp.h
src/gurobi/: gurobi_env.cpp
src/gurobi/LP/: gurobi.cpp  gurobi_lp.cpp
src/gurobi/QP/: gurobi.cpp  gurobi_qp.cpp
src/stochastic/: stochastic_pd.cpp  stochastic_pd2.cpp
src/stochastic/measure/: cvar.cpp
src/util/: constraint_reduction.cpp  functions.cpp  solver_factory.cpp  timer.cpp
src/util/callback/: composite.cpp  function.cpp  progress.cpp  save_hdf5.cpp
test/: callbacks.py  test.h5
test/dLP/: cre_subproblem.cpp
